# AI_Financial_Advisor

./: .env.example  .gitignore  LICENSE  ORCHESTRATOR_README.md  README.md  app.py  debug_agent.py  main.py  multi_agent.py  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_agent.py  test_enhanced_tavily.py  test_fallback.py  test_minimal.py  test_orchestrator.py  test_simple_orchestrator.py  test_simple_tavily.py  test_verbose_agent.py  test_web_search.py
agent/: agentic_workflow.py  simple_orchestrator.py
config/: config.yaml
logger/: __init__.py  logger.py
notebook/: experiment.ipynb  ideal_ipo_suggestion-2.md  ideal_ipo_suggestion_response.txt
prompt_library/: prompt.py
promt_library/: promt.py
tools/: web_search_tool.py
utils/: ipo_info_search.py  model_loader.py
