[project]
name = "AI-financial-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "httpx>=0.24.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-experimental>=0.0.50",
    "langchain-google-community[places]>=1.0.0",
    "langchain-groq>=0.0.1",
    "langchain-openai>=0.0.8",
    "langchain-tavily>=0.0.1",
    "langgraph>=0.0.30",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "setuptools>=80.9.0",
    "uvicorn[standard]>=0.24.0",
]
